# ask-catechism

./: README.md
backend/: .gitignore  Makefile  README.md  pyproject.toml  scratch.py  text_data.pkl
backend/app/: context.py
backend/app/api/routers/: chat.py
backend/app/engine/: engine.py  generate.py
backend/data/: nodes.pkl
backend/scripts/: chat_llama.py
frontend/: package-lock.json  package.json
